--- a/blog_web/src/base.scss
+++ b/blog_web/src/base.scss
@@ -19,8 +19,7 @@
 
 $c-dark: #1a1a22;
 $c-white: #fcfcfc;
-$c-medium: #5e5e64;
-$c-light: #8c8c90;
+$c-medium: #8c8c90;
 $c-disabled: #bababc;
 $c-error: #e4655f;
 $c-warning: #e4655f;
@@ -31,6 +30,7 @@ $c-pending: #f3b550;
 $c-info: #38c0c4;
 $c-cancelled: #ededee;
 $c-main:#3b2f8c;
+$c-light:rgb(168, 158, 223);
 
 /** 字体颜色 */
 
