--- a/blog_web/src/base.scss
+++ b/blog_web/src/base.scss
@@ -19,18 +19,23 @@
 
 $c-dark: #1a1a22;
 $c-white: #fcfcfc;
+//浅色字体
 $c-medium: #8c8c90;
 $c-disabled: #bababc;
 $c-error: #e4655f;
 $c-warning: #e4655f;
+//hover颜色
 $c-brand: #1AD48E;
 $c-highlight: #23CCD1;
 $c-link: #23CCD1;
 $c-pending: #f3b550;
-$c-info: #38c0c4;
+//连接颜色
+$c-info: #4284ca;
 $c-cancelled: #ededee;
-$c-main:#3b2f8c;
-$c-light:rgb(168, 158, 223);
+//主题色
+$c-main:#437db3;
+//主题浅色
+$c-light:rgb(158, 197, 223);
 
 /** 字体颜色 */
 
