--- a/blog_web/src/base.scss
+++ b/blog_web/src/base.scss
@@ -21,13 +21,13 @@ $c-dark: #1a1a22;
 $c-white: #fcfcfc;
 //浅色字体
 $c-medium: #8c8c90;
-$c-disabled: #bababc;
+$c-disabled: #d7d7d8;
 $c-error: #e4655f;
 $c-warning: #e4655f;
 //hover颜色
 $c-brand: #1AD48E;
 $c-highlight: #23CCD1;
-$c-link: #23CCD1;
+$c-link: #1abc9c;
 $c-pending: #f3b550;
 //连接颜色
 $c-info: #4284ca;
