--- a/blog_web/src/base.scss
+++ b/blog_web/src/base.scss
@@ -21,7 +21,7 @@ $c-dark: #1a1a22;
 $c-white: #ffffff;
 //浅色字体
 $c-medium: #8c8c90;
-$c-disabled: #d7d7d8;
+$c-disabled: #eeeeee;
 $c-error: #e4655f;
 $c-warning: #e4655f;
 //hover颜色
